<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="se.soduti.products.swimtimer.MainActivity">
<!--
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
-->
    <item
        android:id="@+id/menu_item_switch_activity"
        android:orderInCategory="200"
        android:title="@string/switchActivity_one"
        android:icon="@drawable/switch_activity_icon"
        android:minWidth="10dp"
        android:padding="0dp"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/menu_item_add"
        android:orderInCategory="200"
        android:title="@string/addLane"
        android:icon="@drawable/menu_add_white_32"
        android:minWidth="10dp"
        android:padding="0dp"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/menu_item_remove"
        android:orderInCategory="200"
        android:title="@string/removeLane"
        android:icon="@drawable/menu_remove_white_32"
        android:minWidth="10dp"
        android:padding="0dp"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/menu_item_share"
        android:title="@string/action_share"
        android:orderInCategory="200"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        app:showAsAction="ifRoom"
        />
    <!--android:icon="@android:drawable/ic_menu_share"-->
    <item
        android:id="@+id/menu_item_save"
        android:orderInCategory="200"
        android:title="@string/action_save"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_item_mode"
        android:orderInCategory="200"
        android:title="@string/action_mode_increment"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_item_help"
        android:orderInCategory="200"
        android:title="@string/action_help"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_item_about"
        android:orderInCategory="200"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>
