<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="se.soduti.swimtimer.About"
    android:background="@drawable/water">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/header_water"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>
    <!--android:background="?attr/colorPrimary"-->
    <!--<include layout="@layout/content_about" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_gravity="top|center"
            android:contentDescription="@string/iconname"
            android:src="@drawable/swimtimer_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/ApplicationName"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/about_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/version"
            android:textSize="20dp" />

        <RelativeLayout
            android:layout_marginTop="60dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/about_donate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:text="@string/about_donate"
                android:textSize="20dp"
                android:layout_marginLeft="86dp"
                android:layout_marginStart="86dp"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <ImageButton
                android:id="@+id/swish_image"
                android:layout_marginLeft="20dp"
                android:layout_width="50dp"
                android:layout_height="50dp"

                android:background="@drawable/swish_notext"/>
        </RelativeLayout>
        <!--
                <RelativeLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                <TextView
                    android:id="@+id/about_fb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal"
                    android:text="@string/about_like"
                    android:textSize="20dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="86dp"
                    android:layout_marginStart="86dp" />
                    <ImageButton
                        android:id="@+id/fb_image"
                        android:layout_marginLeft="34dp"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/fb"
                        android:layout_marginStart="34dp"
                        android:layout_alignParentTop="true"
                        android:layout_toRightOf="@+id/about_fb"
                        android:layout_toEndOf="@+id/about_fb" />
                </RelativeLayout>
        -->
    </LinearLayout>


        <TextView
            android:id="@+id/about_copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/copyright"
            android:layout_marginBottom="10dp"
            android:textSize="14dp"
            android:autoLink="web"/>


</android.support.design.widget.CoordinatorLayout>
