<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:fitsSystemWindows="true"
    android:background="@color/colorLightBackground"
    android:windowSoftInputMode="stateVisible|adjustResize"
    tools:context=".OneClock">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/view">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_oneclock"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/header_water"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">
    <Button
        android:id="@+id/one_clear"
        android:text="@string/ResetAll"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:background="@drawable/smoothbutton"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/one_tvStopWatch"
        android:layout_toEndOf="@+id/one_tvStopWatch" />
    <Button
        android:id="@+id/one_stop"
        android:text="@string/Stop"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="5dp"
        android:background="@drawable/smoothbutton"
        android:layout_toRightOf="@+id/one_tvStopWatch"
        android:layout_toEndOf="@+id/one_tvStopWatch" />

    <TextView
        android:id="@+id/one_tvStopWatch"
        style="@style/CustomOneClockTimerStyle"
        android:text="00:00.0"


        android:layout_toRightOf="@+id/one_rlv"
        android:layout_toEndOf="@+id/one_rlv" />
    <TextView
        android:id="@+id/one_tvShowLatest"
        style="@style/CustomOneClockTimerStyle"
        android:text="00:00.0"
        android:layout_below="@+id/one_tvStopWatch"
        android:layout_toRightOf="@+id/one_rlv"
        android:layout_toEndOf="@+id/one_rlv" />

    <Button
        android:id="@+id/one_start"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:background="@drawable/one_button"
        android:text="@string/Start"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="30sp"
        android:layout_below="@+id/one_tvShowLatest"
        android:layout_centerHorizontal="true" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/one_rlv"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignTop="@+id/one_tvStopWatch"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/one_start"
        android:layout_toStartOf="@+id/one_start" />
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
